connections return a list of only ids